# joneshell

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/joneshell/: __main__.py
