[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "joneshell"
version = "0.1.0"
authors = [
  { name="Jone" }
]
description = "Jone's own shell"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
